--- a/packages/@online-drawer/front-end/package.json
+++ b/packages/@online-drawer/front-end/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "fabric": "^5.2.4",
+    "nanoid": "^4.0.0",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@types/fabric": "^4.5.11",
