--- a/packages/@online-drawer/front-end/package.json
+++ b/packages/@online-drawer/front-end/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker-build": "docker build . -t online-drawer/front-end"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/fabric": "^4.5.11",
+    "@types/node": "^18.7.14",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
