--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run:
-          npm run docker-build \ 
-          docker tag online-drawer/front-end online-drawer/front-end:$(date +%s) \
-          docker tag online-drawer/websocket-server online-drawer/websocket-server:$(date +%s) \ 
-          docker push ghcr.io/shadowfish07/online-drawer/front-end:$(date +%s) \
-          docker push ghcr.io/shadowfish07/online-drawer/websocket-server:$(date +%s) \
+          npm run docker-build |
+          docker tag online-drawer/front-end online-drawer/front-end:$(date +%s) |
+          docker tag online-drawer/websocket-server online-drawer/websocket-server:$(date +%s) |
+          docker push ghcr.io/shadowfish07/online-drawer/front-end:$(date +%s) |
+          docker push ghcr.io/shadowfish07/online-drawer/websocket-server:$(date +%s)
         
