--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,8 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    tags:
+     - '*'
 
 jobs:
 
@@ -19,8 +18,8 @@ jobs:
       - name: Build the Docker image
         run: |
           npm run docker-build 
-          docker tag online-drawer/front-end online-drawer/front-end:$(date +%s)
-          docker tag online-drawer/websocket-server online-drawer/websocket-server:$(date +%s)
-          docker push ghcr.io/shadowfish07/online-drawer/front-end:$(date +%s)
-          docker push ghcr.io/shadowfish07/online-drawer/websocket-server:$(date +%s)
+          docker tag online-drawer/front-end ghcr.io/shadowfish07/online-drawer/front-end:${{ github.ref }}
+          docker tag online-drawer/websocket-server ghcr.io/shadowfish07/online-drawer/websocket-server:${{ github.ref }}
+          docker push ghcr.io/shadowfish07/online-drawer/front-end:${{ github.ref }}
+          docker push ghcr.io/shadowfish07/online-drawer/websocket-server:${{ github.ref }}
         
