--- a/packages/@online-drawer/front-end/package.json
+++ b/packages/@online-drawer/front-end/package.json
@@ -17,8 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "styled-components": "^5.3.5",
-    "ws": "^8.8.1"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/fabric": "^4.5.11",
