--- a/packages/@online-drawer/front-end/default.conf
+++ b/packages/@online-drawer/front-end/default.conf
@@ -1,14 +1,32 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
+upstream websocket {
+    server online-drawer-websocket-server:8081;
+}
+
 server {
         listen 8080;
-        # server_name your.domain.com;
  
         root /app/dist;
         index index.html index.htm;
  
+        location /ws {
+                proxy_pass http://websocket;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection $connection_upgrade;
+                proxy_set_header Host $host;
+        }
+
         location / {
                 try_files $uri $uri/ /index.html;
         }
 
+
         client_max_body_size 20M;
         keepalive_timeout 10;
 }
+
