--- a/packages/@online-drawer/websocket-server/package.json
+++ b/packages/@online-drawer/websocket-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@online-drawer/websocket-server",
-  "version": "0.0.0",
+  "version": "0.0.7-5",
   "description": "",
   "main": "index.js",
   "scripts": {
